--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,12 @@ $tf/
 *.gpState
 
 # ReSharper is a .NET coding add-in
+bin/
+obj/
+/packages/
+riderModule.iml
+/_ReSharper.Caches/
+
 _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
