--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -10,6 +10,9 @@
 
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="4.7.1" />
+      <PackageReference Include="SharpFont" Version="4.0.1" />
+      <PackageReference Include="SharpFont.Dependencies" Version="2.6.0" />
+      <PackageReference Include="SpaceWizards.SharpFont" Version="1.0.1" />
       <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
 
