HDR background broken

--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -105,6 +105,12 @@
       <None Update="Resources\Shaders\brdf.frag">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\HDR\back.hdr">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\HDR\back.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
