New project structure and many refactorings
Works well..

--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -76,10 +76,10 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Shaders\pbr.frag">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Shaders\pbr.vert">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Shaders\background.frag">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -110,6 +110,9 @@
       </None>
       <None Update="Resources\HDR\back.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Shaders\lighting.frag">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
