--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -174,6 +174,12 @@
       <None Update="runtimes\win-x64\native\cimnodes.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Textures\Editor\cube.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Editor\cube2.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
