Object Selection & Lines!
- Stencil buffers added

--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -180,6 +180,9 @@
       <None Update="Resources\Textures\Editor\cube2.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Shaders\color.frag">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
