--- a/log4net.config
+++ b/log4net.config
@@ -18,7 +18,7 @@
         </appender>
         <appender name="Console" type="log4net.Appender.ConsoleAppender">
         <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%date %-5level: %message%newline" />
+            <conversionPattern value="[%date] [%logger] [%level] : %message%newline" />
         </layout>
         </appender>
         <root>
