--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -24,10 +24,9 @@
       <PackageReference Include="freetype2" Version="2.6.0.1" />
       <PackageReference Include="log4net" Version="2.0.14" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-      <PackageReference Include="OpenTK" Version="4.7.1" />
-      <PackageReference Include="OpenTK.Windowing.Desktop" Version="4.7.1" />
+      <PackageReference Include="OpenTK" Version="4.7.4" />
+      <PackageReference Include="OpenTK.Windowing.Desktop" Version="4.7.4" />
       <PackageReference Include="SharpFontCore" Version="0.1.1" />
-      <PackageReference Include="SharpSerializer" Version="3.0.2" />
       <PackageReference Include="SpaceWizards.SharpFont" Version="1.0.1" />
       <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     </ItemGroup>
@@ -189,12 +188,40 @@
       <None Update="runtimes\win-x86\native\cimplot.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Shaders\cubemap.frag">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Shaders\skybox.vert">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Shaders\skybox.frag">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\back.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\bottom.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\front.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\left.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\right.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Resources\Textures\Skybox\top.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Core\Physics\Collisions" />
       <Folder Include="Core\Rendering\Lighting" />
       <Folder Include="Libs\Dlls" />
+      <Folder Include="Resources\Textures\Skybox" />
       <Folder Include="runtimes\win-x64\native" />
     </ItemGroup>
 
