--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -150,7 +150,7 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Fonts\fa-regular-400.ttf">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Fonts\fa-brands-400.ttf">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -293,6 +293,15 @@
       <None Update="Resources\Textures\tiles\albedo.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="runtimes\win-x64\native\cimguizmo.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Libs\Dlls\ImGui.NET.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Libs\Dlls\ImGuizmo.NET.dll">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -318,17 +327,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="ImGui.NET, Version=1.87.3.0, Culture=neutral, PublicKeyToken=null">
+      <Reference Include="ImGui.NET, Version=1.84.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>Libs\Dlls\ImGui.NET.dll</HintPath>
       </Reference>
       <Reference Include="ImGuizmo.NET, Version=1.61.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>Libs\Dlls\ImGuizmo.NET.dll</HintPath>
-      </Reference>
-      <Reference Include="ImNodes.NET, Version=0.3.0.0, Culture=neutral, PublicKeyToken=null">
-        <HintPath>Libs\Dlls\ImNodes.NET.dll</HintPath>
-      </Reference>
-      <Reference Include="ImPlot.NET, Version=0.8.0.0, Culture=neutral, PublicKeyToken=null">
-        <HintPath>Libs\Dlls\ImPlot.NET.dll</HintPath>
       </Reference>
     </ItemGroup>
 </Project>
