--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -318,6 +318,9 @@
       <Content Include="freetype6.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Include="Resources\Textures\editoricons.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
