--- a/ArchEngine.csproj
+++ b/ArchEngine.csproj
@@ -302,6 +302,9 @@
       <None Update="Libs\Dlls\ImGuizmo.NET.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Textures\tiles\roughness.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
